base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: demo-project
  labels:
    app: demo-project
  
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demo-project
  template:
    metadata:
      name: demo-project
      labels:
        app: demo-project
    spec:
      containers:
        - name: demo-project
          image: demo-project:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
