base/apidemo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apidemo
  namespace: apidemo
  labels:
    app: apidemo
spec:
  type: NodePort
  ports:
  - name: apidemoport
    port: 10088
    targetPort: 10088
    nodePort: 30080
  selector:
    app: apidemo
